test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/static_local_uninitialized.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[56]:
  int
  identifier(foo)
  (
  void
  )
  {
  static
  int
  identifier(x)
  ;
  identifier(x)
  =
  identifier(x)
  +
  const int(1)
  ;
  return
  identifier(x)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(ret)
  ;
  for
  (
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  <
  const int(4)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  )
  identifier(ret)
  =
  identifier(foo)
  (
  )
  ;
  return
  identifier(ret)
  ;
  }
