test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/conflicting_global_definitions.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(foo)
  =
  const int(3)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
  int
  identifier(foo)
  =
  const int(4)
  ;
